--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
     <string name="i_am_poor">I Am Poor</string>
+    <string name="www_londonappbrewery_com">www.londonappbrewery.com</string>
 </resources>
