I Am Poor Finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">I Am Poor</string>
     <string name="i_am_poor">I Am Poor</string>
     <string name="www_londonappbrewery_com">www.londonappbrewery.com</string>
+    <string name="i_am">I Am</string>
+    <string name="poor">poor</string>
 </resources>
