I Am poor add button (roll)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="www_londonappbrewery_com">www.londonappbrewery.com</string>
     <string name="i_am">I Am</string>
     <string name="poor">poor</string>
+    <string name="roll">ROLL</string>
 </resources>
